--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+.wrapper {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 10px;
+}
