add loader,filter and addrow components

--- a/src/index.css
+++ b/src/index.css
@@ -22,3 +22,15 @@ body {
 ul {
   padding-left: 0;
 }
+
+th {
+  cursor: pointer;
+}
+
+label {
+  /* display: flex; */
+}
+
+.dropdown__inputs {
+  display: grid;
+}
