--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
   align-items: center;
   justify-content: center;
   gap: 10px;
+  flex-wrap: wrap;
 }
 
 .pag__link {
@@ -13,6 +14,10 @@
   display: flex;
   align-items: center;
   border: 1px solid goldenrod;
+}
+
+.pag__link--active {
+  background-color: goldenrod;
 }
 
 .lds-dual-ring {
