--- a/src/index.css
+++ b/src/index.css
@@ -9,8 +9,23 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
+#root {
+  min-height: 100vh;
+  background-color: #cacaca;
 }
 
 .wrapper {
@@ -27,10 +42,25 @@ th {
   cursor: pointer;
 }
 
-label {
-  /* display: flex; */
+.dropdown__inputs {
+  display: flex;
 }
 
-.dropdown__inputs {
-  display: grid;
+.filter__input {
+  margin-right: 15px;
+  flex-grow: 1;
+}
+
+.more-info__list {
+  list-style-type: none;
+  margin-bottom: 0;
+}
+
+.more-info__textarea {
+  display: flex;
+  width: 300px;
+  min-height: 150px;
+}
+.data-size {
+  gap:10px;
 }
